# audio-transcription

./: .gitignore  README.md  docker-compose.yml
backend/: Dockerfile  app.py  logging.conf  main.py  pyproject.toml
backend/src/: __init__.py  log_config.py
backend/src/routes/: root.py  transcribe.py
backend/src/services/: transcription_service.py
frontend/: Dockerfile  app.py  main.py  pyproject.toml  requirements.txt
frontend/src/: __init__.py  services.py
