[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["Miguel Condesso <mcondesso@mail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
Flask = "^2.3.2"
SpeechRecognition = "^3.10.0"
vosk = "^0.3.45"
flask-cors = "^3.0.10"

[tool.poetry.group.dev.dependencies]
black = "^23.3.0"
pylint = "^2.17.4"


[tool.poetry.group.dev-dependencies.dependencies]
python-dotenv = "^1.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
